[gd_scene load_steps=3 format=3 uid="uid://bo6b0pe2c5k5"]

[ext_resource type="PackedScene" uid="uid://hqxikqctx60j" path="res://Scenes/StateMachine Manage/base_state.tscn" id="1_ebeel"]
[ext_resource type="Script" path="res://Scenes/StateMachine Manage/States/Player states/P_dash.gd" id="2_flexm"]

[node name="Dash state" instance=ExtResource("1_ebeel")]
script = ExtResource("2_flexm")
last_speed = 100
_name = "dash"

[node name="Timer" type="Timer" parent="." index="0"]
wait_time = 0.3
one_shot = true

[node name="Timer2SpawnShadow" type="Timer" parent="." index="1"]
wait_time = 0.12

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2SpawnShadow" to="." method="_on_timer_2_spawn_shadow_timeout"]
